--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
+    "framer-motion": "^12.23.26",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
     "next": "16.1.1",
